[workspace]
members = ["lib", "cli", "junos-agent"]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A toolset for working with IRR data"
license = "MIT"
repository = "https://github.com/bgpfu/bgpfu-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "bgp"]
categories = ["network-programming", "database"]

[workspace.dependencies]
# internal
bgpfu-lib = {path = "./lib", version = "0.1.0-alpha.2"}
# external
anyhow = "^1.0"
clap = {version = "^4.0", features = ["derive"]}
clap-verbosity-flag = "2.0"
generic-ip = "0.1.0-rc.4"
irrc = "0.1.0-rc.5"
juniper-jet = { version = "0.1.0-alpha.1", default-features = false }
log = "^0.4"
rpsl = "0.1.0-rc.1"
simplelog = { version = "0.12" }
thiserror = "^1.0"
tokio = { version = "^1.0", features = ["rt-multi-thread", "macros", "signal"] }
tonic = { version = "^0.9", features = ["tls"] }
tower = { version = "^0.4" }
version-sync = "^0.9"
xmhell = "^0.1.0"
