[workspace]
members = ["lib", "cli", "junos-agent", "netconf"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A toolset for working with IRR data"
license = "MIT"
repository = "https://github.com/bgpfu/bgpfu-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "bgp"]
categories = ["network-programming", "database"]

[workspace.dependencies]
# internal
bgpfu-lib = { path = "./lib", version = "0.1.0-alpha.2" }
bgpfu-netconf = { path = "./netconf", version = "0.1.0-alpha.2" }
# external
anyhow = "^1.0"
clap = {version = "^4.0", features = ["derive"]}
clap-verbosity-flag = "^2.0"
generic-ip = "^0.1"
irrc = "0.1.0-rc.6"
quick-xml = "^0.31"
rpsl = "^0.1"
rustls-pemfile = "^2.0"
rustls-pki-types = "^1.0"
simplelog = { version = "^0.12" }
thiserror = "^1.0"
tokio = { version = "^1.0", features = ["rt-multi-thread", "fs", "macros", "signal"] }
tracing = { version = "^0.1", features = ["log"] }
version-sync = "^0.9"
