[package]
name = "bgpfu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bgpfu"

[dependencies]
anyhow.workspace = true
bgpfu-lib.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
generic-ip.workspace = true
rpsl.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
version-sync.workspace = true
