[package]
name = "bgpfu-junos-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bgpfu-junos-agent"

[features]
default = ["junos-23-1"]
junos-23-1 = ["juniper-jet/junos-23-1"]

[dependencies]
anyhow.workspace = true
bgpfu-lib.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
generic-ip.workspace = true
log.workspace = true
juniper-jet.workspace = true
rpsl.workspace = true
simplelog.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
xmhell.workspace = true

[dev-dependencies]
version-sync.workspace = true
