[package]
name = "bgpfu-junos-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bgpfu-junos-agent"

[dependencies]
anyhow.workspace = true
bgpfu-lib.workspace = true
bgpfu-netconf = { workspace = true, features = ["junos"] }
clap.workspace = true
clap-verbosity-flag.workspace = true
generic-ip.workspace = true
quick-xml.workspace = true
rpsl.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
simplelog.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
version-sync.workspace = true
