[package]
name = "bgpfu-junos-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "bgpfu-junos-agent"

[dependencies]
anyhow.workspace = true
bgpfu-lib.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
generic-ip.workspace = true
quick-xml.workspace = true
rpsl.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bgpfu-netconf = { workspace = true, features = ["tls", "junos"] }
tokio = { workspace = true, features = ["fs", "signal", "time", "rt-multi-thread", "macros"] }

[dev-dependencies]
version-sync.workspace = true
