[package]
name = "bgpfu-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "bgpfu"

[dependencies]
irrc = "0.1.0-rc.5"
generic-ip = "0.1.0-rc.2"
log = "^0.4"
rpsl = "0.1.0-rc.1"
thiserror = "^1.0"

[dev-dependencies]
version-sync = "^0.9"
