[package]
name = "bgpfu-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "bgpfu"

[dependencies]
generic-ip.workspace = true
irrc.workspace = true
rpsl.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
version-sync.workspace = true
