[package]
name = "bgpfu-netconf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "netconf"

[features]
junos = ["dep:paste"]

[dependencies]
tokio.workspace = true
thiserror.workspace = true
async-trait = "^0.1"
bytes = "^1.0"
iri-string = "^0.7"
memchr = "^2.0"
paste = { version = "^1.0", optional = true }
quick-xml = "^0.31"
russh = "^0.39"
russh-keys = "^0.38"
rustls-pki-types = "^1.0"
tokio-rustls = "^0.25"
tracing = { version = "^0.1", features = ["log"] }
uuid = { version = "^1.0", features = ["v4", "fast-rng"] }


[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
simplelog.workspace = true
version-sync.workspace = true
rustls-pemfile = "^2.0"

[[example]]
name = "ephemeral"
required-features = ["junos"]
