[package]
name = "bgpfu-netconf"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "netconf"

[features]
junos = ["dep:chrono", "dep:paste"]

[dependencies]
chrono = {workspace = true, optional = true}
quick-xml.workspace = true
rustls-pki-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait = "^0.1"
bytes = "^1.0"
iri-string = "^0.7"
memchr = "^2.0"
paste = { version = "^1.0", optional = true }
russh = "^0.39"
russh-keys = "^0.38"
tokio-rustls = "^0.25"
uuid = { version = "^1.0", features = ["v4", "fast-rng"] }


[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
rustls-pemfile.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
version-sync.workspace = true

[[example]]
name = "ephemeral"
required-features = ["junos"]
